--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -12,6 +12,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{base_url()}}/public/css/bootstrap.min.css" rel="stylesheet">
+    <script src="{{base_url()}}/public/js/jquery.min.js"></script>
+    <script src="{{base_url()}}/public/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom styles for this template -->
     <style>
@@ -33,7 +35,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">......</a>
+        <a class="navbar-brand" href="#">Web Crawler</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,15 +48,15 @@
     <!-- Page Content -->
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 col-md-6 center-block text-center" style="margin: 100px;">
+        <div class="col-lg-10 col-md-10 col-md-push-1 center-block" style="margin: 100px;">
           {# <h1 class="mt-5"></h1> #}
         <form name="excelupload" enctype="multipart/form-data" method="post" id="excelupt">
           <div class="form-group">
             <div class="input-group">
               <div class="alert alert-dismissible alert-successs" id="status"></div>
             <span class="input-group-addon"><i class="glyphicon glyphicon-email"></i></span>
-              <input type="file" name="fileupload" id="excelfile">
-              <span class="input-group-btn"><button id="submit" class="btn btn-default">Run check</button></span>
+              <input type="file" name="fileupload" id="excelfile" style="border: 2px solid grey; padding: 10px;">
+              <span class="input-group-btn"><button id="submit" class="btn btn-primary btn-lg">Run check</button></span>
             </div>
           </div>
         </form>
@@ -63,31 +65,52 @@
       </div>
     </div>
     <div class="container-fluid">
-      <button class="btn btn-primary" style="margin: 20px 0 20px;" id="checkk">Check Status</button>
+      <button class="btn btn-primary" style="margin: 20px 0 20px; display: none;" id="checkk">Check Status</button>
+      <button class="btn btn-primary" style="margin: 20px 0 20px; display: none; float: right;" id="checkkk">Download Excel File</button>
      <div id="tablecont">
-
+  
 
         </div>
       </div>
     <!-- Bootstrap core JavaScript -->
-    <script src="{{base_url()}}/public/js/jquery.min.js"></script>
-    <script src="{{base_url()}}/public/js/bootstrap.bundle.min.js"></script>
+
 
     <script>
 
       $(document).ready(function(){
 
         var form, fileSelect, uploadButton, statusDiv, responseobj, tablei, statusc, maray = [];
+
+
+
         $("#checkk").click(function(){
 
           console.log(maray.length);
 
           for(var imgo=1; imgo<=$("#tablecont table tr").length; imgo++){
 
-            $("#tablecont table tr:nth-child("+(imgo+1)+")").find("td:nth-child(6)").text(maray[imgo-1].substr(0,30));
+            $("#tablecont table tr:nth-child("+(imgo+1)+")").find("td:nth-child(6)").text((maray[imgo-1]).substr(0,30));
           }
-
+          
         });
+        $("#checkkk").click(function(){
+          
+                    var tablehtml = $("#dtable").html();
+                    //console.log("dgfs");
+                    var hthr = new XMLHttpRequest();
+                    hthr.open("POST", "/urlcrawler/converttoexcel", true);
+                    hthr.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+
+                    hthr.onload = function(){
+                      if(this.status == 200){
+                        return this.responseText;
+                        console.log(this.responseText);
+                      }
+                    }
+
+                    hthr.send("html="+tablehtml);
+          
+                  });
         $("#excelupt").submit(function(e){
           e.preventDefault();
 
@@ -136,6 +159,7 @@
 
         });
 
+       
 
 
          function rundisish(){
@@ -179,7 +203,7 @@
           }
         function populateTable(responseobj){
 
-          tablei = '<table class="table table-bordered table-striped">';
+          tablei = '<table class="table table-bordered table-striped" id="dtable">';
           tablei += '<tr><td>Url</td><td>Published By</td><td>Last Saved By</td><td>Published Time</td></td><td>End Published Time</td><td>Page Response</td></tr>';
 
             for(var i in responseobj){
@@ -195,9 +219,13 @@
                 //console.log((responseobj[i]).length);
             }
             $("#urlcheck").show();
+            $("#checkk").show();
+            $("#checkkk").show();
+            
           tablei += '</table>';
 
           $("#tablecont").append(tablei);
+
          rundisish();
          //setTimeout(console.log(maray), 20000);
         }
