--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bare - Start Bootstrap Template</title>
+    <title>Web Crawler</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{base_url()}}/public/css/bootstrap.min.css" rel="stylesheet">
@@ -150,7 +150,7 @@
       
               // Create a new FormData object.
               var formData = new FormData();
-      
+
               //Grab just one file, since we are not allowing multiple file uploads
               var file = files[0]; 
           
